# DiligentCore

./: CMakeLists.txt
BuildTools/CMake/: BuildUtils.cmake
Graphics/GraphicsAccessories/src/: GraphicsAccessories.cpp
Graphics/GraphicsEngine/interface/: GraphicsTypes.h
Graphics/GraphicsEngineWebGPU/: CMakeLists.txt
Graphics/GraphicsEngineWebGPU/include/: AttachmentCleanerWebGPU.hpp  BufferViewWebGPUImpl.hpp  BufferWebGPUImpl.hpp  DeviceContextWebGPUImpl.hpp  EngineWebGPUImplTraits.hpp  FenceWebGPUImpl.hpp  FramebufferWebGPUImpl.hpp  PipelineResourceAttribsWebGPU.hpp  PipelineResourceSignatureWebGPUImpl.hpp  PipelineStateWebGPUImpl.hpp  QueryManagerWebGPU.hpp  QueryWebGPUImpl.hpp  QueueSignalPoolWebGPU.hpp  RenderDeviceWebGPUImpl.hpp  RenderPassWebGPUImpl.hpp  SamplerWebGPUImpl.hpp  ShaderResourceBindingWebGPUImpl.hpp  ShaderResourceCacheWebGPU.hpp  ShaderVariableManagerWebGPU.hpp  ShaderWebGPUImpl.hpp  SharedMemoryManagerWebGPU.hpp  SwapChainWebGPUImpl.hpp  TextureViewWebGPUImpl.hpp  TextureWebGPUImpl.hpp  WebGPUObjectWrappers.hpp  WebGPUTypeConversions.hpp  pch.h
Graphics/GraphicsEngineWebGPU/interface/: BufferViewWebGPU.h  BufferWebGPU.h  DeviceContextWebGPU.h  EngineFactoryWebGPU.h  RenderDeviceWebGPU.h  SamplerWebGPU.h  SwapChainWebGPU.h  TextureViewWebGPU.h  TextureWebGPU.h
Graphics/GraphicsEngineWebGPU/src/: AttachmentCleanerWebGPU.cpp  BufferViewWebGPUImpl.cpp  BufferWebGPUImpl.cpp  DLLMain.cpp  DeviceContextWebGPUImpl.cpp  EngineFactoryWebGPU.cpp  FenceWebGPUImpl.cpp  FramebufferWebGPUImpl.cpp  GraphicsEngineWebGPU.def  QueryManagerWebGPU.cpp  QueryWebGPUImpl.cpp  QueueSignalPoolWebGPU.cpp  RenderDeviceWebGPUImpl.cpp  RenderPassWebGPUImpl.cpp  SamplerWebGPUImpl.cpp  ShaderWebGPUImpl.cpp  SharedMemoryManagerWebGPU.cpp  SwapChainWebGPUImpl.cpp  TextureViewWebGPUImpl.cpp  TextureWebGPUImpl.cpp  WebGPUTypeConversions.cpp
Tests/DiligentCoreAPITest/: CMakeLists.txt
Tests/DiligentCoreAPITest/include/InlineShaders/: ComputeShaderTestWGSL.h  DrawCommandTestWGSL.h
Tests/DiligentCoreAPITest/include/WebGPU/: CreateObjFromNativeResWebGPU.hpp
Tests/DiligentCoreAPITest/src/: BufferCreationTest.cpp  ClearRenderTargetTest.cpp  ComputeShaderTest.cpp  DrawCommandTest.cpp  RenderPassTest.cpp  TextureCreationTest.cpp
Tests/DiligentCoreAPITest/src/WebGPU/: ClearRenderTargetReferenceWebGPU.cpp  ComputeShaderReferenceWebGPU.cpp  CreateObjFromNativeResWebGPU.cpp  DrawCommandReferenceWebGPU.cpp
Tests/GPUTestFramework/: CMakeLists.txt
Tests/GPUTestFramework/src/: GPUTestingEnvironment.cpp
Tests/GPUTestFramework/src/WebGPU/: TestingEnvironmentWebGPU.cpp  TestingSwapChainWebGPU.cpp
Tests/IncludeTest/GraphicsEngineWebGPU/: BufferViewWebGPUH_test.c  BufferWebGPUH_test.c  BufferWebGPUH_test.cpp  DeviceContextWebGPUH_test.c  DeviceContextWebGPUH_test.cpp  EngineFactoryWebGPUH_test.c  EngineFactoryWebGPUH_test.cpp  RenderDeviceWebGPUH_test.c  RenderDeviceWebGPUH_test.cpp  SamplerWebGPUH_test.c  SamplerWebGPUH_test.cpp  SwapChainWebGPUH_test.c  SwapChainWebGPUH_test.cpp  TextureViewWebGPUH_test.c  TextureViewWebGPUH_test.cpp  TextureWebGPUH_test.c  TextureWebGPUH_test.cpp
